@@ -1,5 +1,8 @@
 Release Notes
 
+* 4/10/2016
+  * fixed sortParallelJobsBySite for oldPandaIDs
+
 * 4/7/2016
   * added eventService to WQ
 
